package NYT.NObjectServer.NProto;

////////////////////////////////////////////////////////////////////////////////

message TReqGetId
{ }

message TRspGetId
{
    required bytes object_id = 1;
}

////////////////////////////////////////////////////////////////////////////////
